# rag-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.infra/ingestor/: Dockerfile  docker-compose.yml
.infra/rag/: Dockerfile  docker-compose.yml
scripts/: chroma_metrics.py  example.http
src/ingest/: cli.py  config.py  indexer.py  processor.py
src/ingest/loaders/: factory.py  registry.py
src/rag/: config.py
src/rag/api/: main.py  schemas.py
src/rag/api/routes/: query.py
src/rag/chain/: prompts.py  rag_chain.py
src/rag/chain/steps/: doc_formatter.py
src/rag/retriever/: base.py  chroma_retriever.py
tests/: conftest.py  test_chain.py  test_ingestion.py  test_retriever.py
